# graphisoft-2017

./: README.md
final/: .gitignore  CMakeLists.txt
final/original/: main.cpp  solver.cpp  solver.h
final/src/: Client.cpp  Client.h  EagerTaxicab.cpp  EagerTaxicab.h  FloodFill.cpp  FloodFill.h  Grid.cpp  Grid.h  InputParser.cpp  InputParser.h  Point.h  Response.h  Solver.cpp  Solver.h  SuperFill.cpp  SuperFill.h  UpwindSailer.cpp  UpwindSailer.h  Util.cpp  Util.h  main.cpp  platform_dep.h  scores.cpp  solver.cpp  solver.h  test.cpp
final/src/gui/: Game.cpp  GameWindow.cpp  Interactive.cpp  main.cpp
final/src/server/: Command.cpp  Command.hpp  server.cpp
qualif/allas/: 1200  1300  1400  1500  1600  1700  1800  1900  1930  2000  2030  2100  2130  2200  2230  2300  output.csv  plot.py
qualif/egybevagosag/: .gitignore  generate.py  lyukas.in  lyukas_2.in  main.cpp  main2.cpp  test.sh
qualif/egybevagosag/tests/: duplicated_edges.in  duplicated_vertices.in  faceless_edge.in  groupings.in  non_isomorphic_edges.in  rotated_vertices.in  sponge.in  sponge2.in  square.in  translated_vertices.in  unsorted_vertices.in
qualif/iskolabusz/: bus.py  log.cpp  result100.txt  solution.cpp  solution_nl.cpp  solution_nl_gcc.cpp  test_solution.py
qualif/labirintus/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp  test1.in  test2.in
qualif/labirintus/src/: gui.cpp  main.cpp
qualif/labirintus/src/font/: trebuchet_ms_ttf.h
qualif/topart/: cycle_back.in  cycle_short.in  generate.py  main.cpp  main2.cpp  route_cost.in  sample.in  test1.in  test4.in  testA.in  testX.in  validate.py  zero.cpp
semi-final/: .editorconfig  CMakeLists.txt
semi-final/src/: AI.cpp  AI.h  Bounds.h  Client.cpp  Client.h  ClientResponse.h  EagerTaxicab.cpp  EagerTaxicab.h  Field.h  FloodFill.cpp  FloodFill.h  Grid.cpp  Grid.h  Gui.cpp  Hsv2rgb.cpp  Hsv2rgb.h  InputParser.cpp  InputParser.h  Matrix.h  MonteCarlo.cpp  MonteCarlo.h  Point.h  Response.h  Solver.cpp  Solver.h  SuperFill.cpp  UpwindSailer.cpp  UpwindSailer.h  Util.cpp  Util.h  gui.cpp  main.cpp  platform_dep.h  server.cpp  solver.cpp  solver.h  test.cpp
semi-final/src/gui/: Animation.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Gui.cpp  Interactive.h  main.cpp
semi-final/src/server/: server.cpp
semi-final/submission/: CMakeLists.txt
semi-final/submission/src/: Bounds.cpp  Client.cpp  Client.h  EagerTaxicab.cpp  Grid.cpp  Grid.h  Matrix.h  SuperFill.cpp  Util.h  main.cpp  platform_dep.h
